# haskell-dirWatcher

./: README.md  dirWatcher.cabal
src/: Main.hs
