name: dirWatcher
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable dir_watcher
    build-depends: base -any,
                   directory -any,
                   split -any,
                   unix -any,
                   transformers -any,
                   mtl -any,
                   ConfigFile -any,
                   MissingH -any,
                   process -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-dir_watcher
    build-depends: QuickCheck -any, base -any, directory -any,
                   split -any, transformers -any, mtl -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
